data: cron update

--- a/data/sources/api-prague.yaml
+++ b/data/sources/api-prague.yaml
@@ -6,11 +6,11 @@ series:
     image: https://secure.meetupstatic.com/photos/event/9/7/2/d/600_498578701.jpeg
   events:
   - meetupcom:
-      meta_description: 'Thu, Sep 16, 6:00 PM CEST: ⚠️ Register via Eventbrite to get the ticket: https://www.eventbrite.com/e/superface-demo-day-self-integrating-applications-in-nodejs-tickets-169443392749
+      meta_description: 'Thu, Sep 16, 6:00 PM  CEST: ⚠️ Register via Eventbrite to get the ticket: https://www.eventbrite.com/e/superface-demo-day-self-integrating-applications-in-nodejs-tickets-169443392749
 
 
         Join us in celeb'
-      og_title: 'Superface Demo Day: Self-integrating applications in Node.js | Meetup'
+      og_title: 'Superface Demo Day: Self-integrating applications in Node.js, Thu, Sep 16, 2021, 6:00 PM   | Meetup'
       image: https://secure.meetupstatic.com/photos/event/9/7/4/6/600_498578726.jpeg
       url: https://www.meetup.com/api-prague/events/280531427/
       ical:
@@ -34,8 +34,8 @@ series:
         dtstart: 2021-09-16 18:00:00+02:00
         dtend: 2021-09-16 22:00:00+02:00
   - meetupcom:
-      meta_description: 'Mon, Nov 8, 4:00 PM CET: Integrate APIs with Superface in 3 lines of code. Your applications will self-integrate (and maintain the integrations) autonomously, without any proxies and gateways betwe'
-      og_title: APIs without the Pain 🚀 Superface Intro Webinar | Meetup
+      meta_description: 'Mon, Nov 8, 4:00 PM  CET: Integrate APIs with Superface in 3 lines of code. Your applications will self-integrate (and maintain the integrations) autonomously, without any proxies and gateways betwe'
+      og_title: APIs without the Pain 🚀 Superface Intro Webinar, Mon, Nov 8, 2021, 4:00 PM   | Meetup
       image: https://secure.meetupstatic.com/photos/event/b/1/9/6/600_499785462.jpeg
       url: https://www.meetup.com/api-prague/events/281693311/
       ical:
