--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -491,8 +491,8 @@ series:
         dtstart: 2022-02-03 19:00:00+01:00
         dtend: 2022-02-03 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Mon, Mar 7, 6:30 PM CET: Přemýšleli jste někdy, jak se designuje tramvaj nebo nemocniční postel? Jaké uživatelské potřeby je třeba vzít v potaz? A jestli u nich probíhá nějaké testování použitelnos'
-      og_title: 'UX Monday: Průmyslový design & UX s Ivanem Dlabačem | Meetup'
+      meta_description: 'Mon, Mar 7, 6:30 PM  CET: Přemýšleli jste někdy, jak se designuje tramvaj nebo nemocniční postel? Jaké uživatelské potřeby je třeba vzít v potaz? A jestli u nich probíhá nějaké testování použitelnos'
+      og_title: 'UX Monday: Průmyslový design & UX s Ivanem Dlabačem, Mon, Mar 7, 2022, 6:30 PM   | Meetup'
       url: https://www.meetup.com/asociace-ux/events/284305350/
       ical:
         summary: 'UX Monday: Průmyslový design & UX s Ivanem Dlabačem'
@@ -542,8 +542,8 @@ series:
         dtstart: 2022-03-03 19:00:00+01:00
         dtend: 2022-03-03 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Mon, Apr 4, 6:00 PM CEST: Výzkum “naplánovaný” ze dne na den. Akční kroky do druhého dne. Reálná pomoc koncovému uživateli od třetího dne. Trocha adrenalinu. Vyjednávání s policií. Rychlé změny. Pár'
-      og_title: 'UX Monday: Výzkum s lidmi prchajícími před válkou | Meetup'
+      meta_description: 'Mon, Apr 4, 6:00 PM  CEST: Výzkum “naplánovaný” ze dne na den. Akční kroky do druhého dne. Reálná pomoc koncovému uživateli od třetího dne. Trocha adrenalinu. Vyjednávání s policií. Rychlé změny. Pár'
+      og_title: 'UX Monday: Výzkum s lidmi prchajícími před válkou, Mon, Apr 4, 2022, 6:00 PM   | Meetup'
       url: https://www.meetup.com/asociace-ux/events/284902627/
       ical:
         summary: 'UX Monday: Výzkum s lidmi prchajícími před válkou'
