--- a/data/sources/frontendisti.yaml
+++ b/data/sources/frontendisti.yaml
@@ -194,13 +194,13 @@ series:
         dtstart: 2021-11-10 18:30:00+01:00
         dtend: 2021-11-10 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Mar 9, 6:00 PM CET: Dost bylo pouze online meetupů.
+      meta_description: 'Wed, Mar 9, 6:00 PM  CET: Dost bylo pouze online meetupů.
 
         **Tento bude opět hybridní.**
 
 
         Dorazit můžete **NAŽIVO** do Brna do kanceláři SUPERKODERS. ALe pokud je to od vás do Brna daleko, připojte s'
-      og_title: Nástroje pro design webu a spolupráce s designéry | Frontedisti.cz LIVE | Meetup
+      og_title: Nástroje pro design webu a spolupráce s designéry | Frontedisti.cz LIVE, Wed, Mar 9, 2022, 6:00 PM   | Meetup
       image: https://secure.meetupstatic.com/photos/event/1/2/2/6/600_498544646.jpeg
       url: https://www.meetup.com/frontendisti/events/mbjhpsydcfbmb/
       ical:
@@ -223,8 +223,8 @@ series:
         dtstart: 2022-03-09 18:00:00+01:00
         dtend: 2022-03-09 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Apr 13, 7:00 PM CEST: Po online streamech a konferenci bychom podzim 2021 rádi zvládali jako kombinaci meetupu s online streamem. Hybridní akce budeme střídavě organizovat z Brna a z Prahy. Každ'
-      og_title: Meetup Frontedisti.cz | Meetup
+      meta_description: 'Wed, Apr 13, 7:00 PM  CEST: Po online streamech a konferenci bychom podzim 2021 rádi zvládali jako kombinaci meetupu s online streamem. Hybridní akce budeme střídavě organizovat z Brna a z Prahy. Každ'
+      og_title: Meetup Frontedisti.cz, Wed, Apr 13, 2022, 7:00 PM   | Meetup
       image: https://secure.meetupstatic.com/photos/event/1/2/2/6/600_498544646.jpeg
       url: https://www.meetup.com/frontendisti/events/mbjhpsydcgbrb/
       ical:
