--- a/data/sources/cshug.yaml
+++ b/data/sources/cshug.yaml
@@ -7,8 +7,8 @@ series:
     image: https://secure.meetupstatic.com/photos/event/1/7/3/600_489120371.jpeg
   events:
   - meetupcom:
-      meta_description: 'Thu, Jan 30, 6:00 PM CET: You might have heard news about the declining popularity of Hadoop and the Cloudera-Hortonworks merger. Taglines such as "Hadoop is dead" are growing in popularity. In this'
-      og_title: The End of Hadoop? Big Data & Its Future | Meetup
+      meta_description: 'Thu, Jan 30, 6:00 PM  CET: You might have heard news about the declining popularity of Hadoop and the Cloudera-Hortonworks merger. Taglines such as "Hadoop is dead" are growing in popularity. In this'
+      og_title: The End of Hadoop? Big Data & Its Future, Thu, Jan 30, 2020, 6:00 PM   | Meetup
       image: https://secure.meetupstatic.com/photos/event/1/7/3/600_489120371.jpeg
       url: https://www.meetup.com/CS-HUG/events/268060656/
       ical:
@@ -32,8 +32,8 @@ series:
         dtstart: 2020-01-30 18:00:00+01:00
         dtend: 2020-01-30 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Nov 14, 6:00 PM CET: Apache Spark and Delta Lake (delta.io) are both open-source projects that help with big-data production workloads. While Apache Spark is de-facto the industry standard for '
-      og_title: Making Apache Spark™ Better with Delta Lake | Meetup
+      meta_description: 'Thu, Nov 14, 6:00 PM  CET: Apache Spark and Delta Lake (delta.io) are both open-source projects that help with big-data production workloads. While Apache Spark is de-facto the industry standard for '
+      og_title: Making Apache Spark™ Better with Delta Lake, Thu, Nov 14, 2019, 6:00 PM   | Meetup
       image: https://secure.meetupstatic.com/photos/event/1/7/3/600_489120371.jpeg
       url: https://www.meetup.com/CS-HUG/events/266200104/
       ical:
@@ -57,8 +57,8 @@ series:
         dtstart: 2019-11-14 18:00:00+01:00
         dtend: 2019-11-14 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Oct 31, 6:00 PM CET: Jumpshot is an online analytics company that delivers insights on user behaviors everywhere online. Jumpshot uses machine learning and big data processing in Spark to creat'
-      og_title: Crunching Petabytes with Jumpshot | Meetup
+      meta_description: 'Thu, Oct 31, 6:00 PM  CET: Jumpshot is an online analytics company that delivers insights on user behaviors everywhere online. Jumpshot uses machine learning and big data processing in Spark to creat'
+      og_title: Crunching Petabytes with Jumpshot, Thu, Oct 31, 2019, 6:00 PM   | Meetup
       image: https://secure.meetupstatic.com/photos/event/1/7/3/600_489120371.jpeg
       url: https://www.meetup.com/CS-HUG/events/265835330/
       ical:
@@ -82,8 +82,8 @@ series:
         dtstart: 2019-10-31 18:00:00+01:00
         dtend: 2019-10-31 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Sep 26, 6:00 PM CEST: Spark pipelines represent a powerful concept to support productionizing machine learning workflows. Their API allows to combine data processing with machine learning algori'
-      og_title: 'Fresh Season - Fresh Water: Productionizing H2O Models Using Apache Spark | Meetup'
+      meta_description: 'Thu, Sep 26, 6:00 PM  CEST: Spark pipelines represent a powerful concept to support productionizing machine learning workflows. Their API allows to combine data processing with machine learning algori'
+      og_title: 'Fresh Season - Fresh Water: Productionizing H2O Models Using Apache Spark, Thu, Sep 26, 2019, 6:00 PM   | Meetup'
       image: https://secure.meetupstatic.com/photos/event/1/7/3/600_489120371.jpeg
       url: https://www.meetup.com/CS-HUG/events/264787795/
       ical:
