--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -668,7 +668,7 @@ series:
         dtstart: 2022-03-01 18:30:00+01:00
         dtend: 2022-03-01 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Mar 15, 6:30 PM CET: • How to join?
+      meta_description: 'Tue, Mar 15, 6:30 PM  CET: • How to join?
 
         Online only because of covid https://discord.gg/TnaMJMyTDw
 
@@ -681,7 +681,7 @@ series:
         http://gdg-garage.github.io/
 
         '
-      og_title: GDG Garage Prague One | Meetup
+      og_title: GDG Garage Prague One, Tue, Mar 15, 2022, 6:30 PM   | Meetup
       url: https://www.meetup.com/GDGPrague/events/xqcsqsydcfbtb/
       ical:
         summary: GDG Garage Prague One
@@ -704,7 +704,7 @@ series:
         dtstart: 2022-03-15 18:30:00+01:00
         dtend: 2022-03-15 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Mar 29, 6:30 PM CEST: • How to join?
+      meta_description: 'Tue, Mar 29, 6:30 PM  CEST: • How to join?
 
         Online only because of covid https://discord.gg/TnaMJMyTDw
 
@@ -717,7 +717,7 @@ series:
         http://gdg-garage.github.io/
 
         '
-      og_title: GDG Garage Prague One | Meetup
+      og_title: GDG Garage Prague One, Tue, Mar 29, 2022, 6:30 PM   | Meetup
       url: https://www.meetup.com/GDGPrague/events/xqcsqsydcfbmc/
       ical:
         summary: GDG Garage Prague One
@@ -740,7 +740,7 @@ series:
         dtstart: 2022-03-29 18:30:00+02:00
         dtend: 2022-03-29 20:30:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Apr 12, 6:30 PM CEST: • How to join?
+      meta_description: 'Tue, Apr 12, 6:30 PM  CEST: • How to join?
 
         Online only because of covid https://discord.gg/TnaMJMyTDw
 
@@ -753,7 +753,7 @@ series:
         http://gdg-garage.github.io/
 
         '
-      og_title: GDG Garage Prague One | Meetup
+      og_title: GDG Garage Prague One, Tue, Apr 12, 2022, 6:30 PM   | Meetup
       url: https://www.meetup.com/GDGPrague/events/xqcsqsydcgbqb/
       ical:
         summary: GDG Garage Prague One
@@ -776,7 +776,7 @@ series:
         dtstart: 2022-04-12 18:30:00+02:00
         dtend: 2022-04-12 20:30:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Apr 26, 6:30 PM CEST: • How to join?
+      meta_description: 'Tue, Apr 26, 6:30 PM  CEST: • How to join?
 
         Online only because of covid https://discord.gg/TnaMJMyTDw
 
@@ -789,7 +789,7 @@ series:
         http://gdg-garage.github.io/
 
         '
-      og_title: GDG Garage Prague One | Meetup
+      og_title: GDG Garage Prague One, Tue, Apr 26, 2022, 6:30 PM   | Meetup
       url: https://www.meetup.com/GDGPrague/events/xqcsqsydcgbjc/
       ical:
         summary: GDG Garage Prague One
@@ -812,7 +812,7 @@ series:
         dtstart: 2022-04-26 18:30:00+02:00
         dtend: 2022-04-26 20:30:00+02:00
   - meetupcom:
-      meta_description: 'Tue, May 10, 6:30 PM CEST: • How to join?
+      meta_description: 'Tue, May 10, 6:30 PM  CEST: • How to join?
 
         Online only because of covid https://discord.gg/TnaMJMyTDw
 
@@ -825,7 +825,7 @@ series:
         http://gdg-garage.github.io/
 
         '
-      og_title: GDG Garage Prague One | Meetup
+      og_title: GDG Garage Prague One, Tue, May 10, 2022, 6:30 PM   | Meetup
       url: https://www.meetup.com/GDGPrague/events/xqcsqsydchbnb/
       ical:
         summary: GDG Garage Prague One
