--- a/data/sources/ibm-developer-prague.yaml
+++ b/data/sources/ibm-developer-prague.yaml
@@ -135,8 +135,8 @@ series:
         dtstart: 2021-10-14 17:00:00+02:00
         dtend: 2021-10-14 19:00:00+02:00
   - meetupcom:
-      meta_description: 'Mon, Oct 18, 12:00 PM CEST: Let''s continue the conversation; build smart and build secure with the right tools and services by working with the world’s largest technical support provider for open sour'
-      og_title: Developer Festival | Meetup
+      meta_description: 'Mon, Oct 18, 12:00 PM  CEST: Let''s continue the conversation; build smart and build secure with the right tools and services by working with the world’s largest technical support provider for open sour'
+      og_title: Developer Festival, Mon, Oct 18, 2021, 12:00 PM   | Meetup
       image: https://secure.meetupstatic.com/photos/event/b/2/d/1/600_499485777.jpeg
       url: https://www.meetup.com/IBM-Developer-Prague/events/281430037/
       ical:
@@ -160,8 +160,8 @@ series:
         dtstart: 2021-10-18 12:00:00+02:00
         dtend: 2021-10-20 17:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Nov 25, 4:00 PM CET: 🌍Today everyone is talking about cloud-native services and you might ask yourself what does it really means? Why is it so popular? One of the major cloud-native services a'
-      og_title: Microservices and CloudNative Architecture:Key Use Cases and practical solutions | Meetup
+      meta_description: 'Thu, Nov 25, 4:00 PM  CET: 🌍Today everyone is talking about cloud-native services and you might ask yourself what does it really means? Why is it so popular? One of the major cloud-native services a'
+      og_title: Microservices and CloudNative Architecture:Key Use Cases and practical solutions, Thu, Nov 25, 2021, 4:00 PM   | Meetup
       url: https://www.meetup.com/IBM-Developer-Prague/events/281975947/
       ical:
         summary: Microservices and CloudNative Architecture:Key Use Cases and practical solutions
@@ -185,8 +185,8 @@ series:
         dtend: 2021-11-25 17:00:00+01:00
       image: https://secure.meetupstatic.com/photos/event/2/e/9/b/600_500111931.jpeg
   - meetupcom:
-      meta_description: 'Wed, Jan 19, 5:00 PM CET: 🌍The key of a system or application that thrives in production is not really development, but the way it is operated and supported. Although the positions and careers for '
-      og_title: 'The other side of IT: support and operations | Meetup'
+      meta_description: 'Wed, Jan 19, 5:00 PM  CET: 🌍The key of a system or application that thrives in production is not really development, but the way it is operated and supported. Although the positions and careers for '
+      og_title: 'The other side of IT: support and operations, Wed, Jan 19, 2022, 5:00 PM   | Meetup'
       url: https://www.meetup.com/IBM-Developer-Prague/events/283029566/
       ical:
         summary: 'The other side of IT: support and operations'
@@ -209,8 +209,8 @@ series:
         dtstart: 2022-01-19 17:00:00+01:00
         dtend: 2022-01-19 19:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Feb 17, 6:00 PM CET: 🌍By some estimates, 50 billion devices, appliances, and systems will be connected by 2020. Traditional systems cannot support the volume, speed, and complexity of data bei'
-      og_title: IBM Developer & MongoDB Present:Incite Insights from Real Time Data with MongoDB | Meetup
+      meta_description: 'Thu, Feb 17, 6:00 PM  CET: 🌍By some estimates, 50 billion devices, appliances, and systems will be connected by 2020. Traditional systems cannot support the volume, speed, and complexity of data bei'
+      og_title: IBM Developer & MongoDB Present:Incite Insights from Real Time Data with MongoDB, Thu, Feb 17, 2022, 6:00 PM   | Meetup
       url: https://www.meetup.com/IBM-Developer-Prague/events/283887745/
       ical:
         summary: IBM Developer & MongoDB Present:Incite Insights from Real Time Data with MongoDB
