--- a/data/sources/pipedrive-prague.yaml
+++ b/data/sources/pipedrive-prague.yaml
@@ -130,8 +130,8 @@ series:
         dtstart: 2021-10-19 18:00:00+02:00
         dtend: 2021-10-19 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Nov 16, 6:00 PM CET: Microservices are a popular and well-known architectural choice. Over time, best practices regarding implementing and maintaining this architectural style have evolved. In '
-      og_title: 'Backend Meetup: Advanced Microservices | Meetup'
+      meta_description: 'Tue, Nov 16, 6:00 PM  CET: Microservices are a popular and well-known architectural choice. Over time, best practices regarding implementing and maintaining this architectural style have evolved. In '
+      og_title: 'Backend Meetup: Advanced Microservices, Tue, Nov 16, 2021, 6:00 PM   | Meetup'
       image: https://secure.meetupstatic.com/photos/event/c/4/a/5/600_500150341.jpeg
       url: https://www.meetup.com/pipedrive-talks-prague/events/281095226/
       ical:
@@ -155,8 +155,8 @@ series:
         dtstart: 2021-11-16 18:00:00+01:00
         dtend: 2021-11-16 19:30:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Apr 5, 6:00 PM CEST: One possible career path for engineers is leadership: technical leadership, people management, or both. Typically you’d start by mentoring other engineers, facilitating mee'
-      og_title: 'Engineering Meetup: From Developer to a Leader | Meetup'
+      meta_description: 'Tue, Apr 5, 6:00 PM  CEST: One possible career path for engineers is leadership: technical leadership, people management, or both. Typically you’d start by mentoring other engineers, facilitating mee'
+      og_title: 'Engineering Meetup: From Developer to a Leader, Tue, Apr 5, 2022, 6:00 PM   | Meetup'
       url: https://www.meetup.com/pipedrive-talks-prague/events/284508613/
       ical:
         summary: 'Engineering Meetup: From Developer to a Leader'
