--- a/data/sources/pjsdc.yaml
+++ b/data/sources/pjsdc.yaml
@@ -282,8 +282,8 @@ series:
         dtstart: 2022-03-16 18:00:00+01:00
         dtend: 2022-03-16 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Mar 22, 6:00 PM CET: Chceš do IT, ale nevíš, jaká specializace by ti sedla? Tápeš v tom, co je low-code, pro-code a no-code? Přemýšlíš, že bys začal/a splácet školné až po kurzu a nástupu do pr'
-      og_title: 'Online informační schůzka: Jak nastartovat kariéru v IT od nuly? | Meetup'
+      meta_description: 'Tue, Mar 22, 6:00 PM  CET: Chceš do IT, ale nevíš, jaká specializace by ti sedla? Tápeš v tom, co je low-code, pro-code a no-code? Přemýšlíš, že bys začal/a splácet školné až po kurzu a nástupu do pr'
+      og_title: 'Online informační schůzka: Jak nastartovat kariéru v IT od nuly?, Tue, Mar 22, 2022, 6:00 PM   | Meetup'
       url: https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/284524478/
       ical:
         summary: 'Online informační schůzka: Jak nastartovat kariéru v IT od nuly?'
@@ -306,8 +306,8 @@ series:
         dtstart: 2022-03-22 18:00:00+01:00
         dtend: 2022-03-22 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Apr 12, 6:00 PM CEST: Nenech si utéct příležitost! Vyzkoušej si kódování pod vedením zkušených mentorů. Seznámíš se základy JavaScriptu. Navíc získáš představu o tom, jak probíhá výuka v bootcam'
-      og_title: 'VELIKONOČNÍ ONLINE WORKSHOP: Základy programování | Meetup'
+      meta_description: 'Tue, Apr 12, 6:00 PM  CEST: Nenech si utéct příležitost! Vyzkoušej si kódování pod vedením zkušených mentorů. Seznámíš se základy JavaScriptu. Navíc získáš představu o tom, jak probíhá výuka v bootcam'
+      og_title: 'VELIKONOČNÍ ONLINE WORKSHOP: Základy programování, Tue, Apr 12, 2022, 6:00 PM   | Meetup'
       url: https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/284662295/
       ical:
         summary: 'VELIKONOČNÍ ONLINE WORKSHOP: Základy programování'
