--- a/data/sources/praguejs.yaml
+++ b/data/sources/praguejs.yaml
@@ -1,7 +1,7 @@
 series:
   meetupcom:
     url: https://www.meetup.com/praguejs/events/
-    meta_description: Upcoming events for PragueJS in Prague, Czech Republic. A Meetup group with over 1954 Members.
+    meta_description: Upcoming events for PragueJS in Prague, Czech Republic. A Meetup group with over 1955 Members.
     og_title: Upcoming events | PragueJS (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/e/8/f/c/600_455639644.jpeg
   events:
@@ -442,10 +442,10 @@ series:
         dtstart: 2022-02-22 18:30:00+01:00
         dtend: 2022-02-22 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Mar 29, 6:30 PM CEST: Get out and get social in 2022 : come out and discuss JS together!
+      meta_description: 'Tue, Mar 29, 6:30 PM  CEST: Get out and get social in 2022 : come out and discuss JS together!
 
         Get in touch with the organizers with any questions you have. We welcome a diverse range of topics that a'
-      og_title: '2022 #3 Headless CMS | Meetup'
+      og_title: '2022 #3 Headless CMS, Tue, Mar 29, 2022, 6:30 PM   | Meetup'
       url: https://www.meetup.com/praguejs/events/284378266/
       ical:
         summary: '2022 #3 Headless CMS'
