--- a/data/sources/productboard.yaml
+++ b/data/sources/productboard.yaml
@@ -115,8 +115,8 @@ series:
         dtstart: 2021-10-07 17:00:00+02:00
         dtend: 2021-10-07 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Oct 19, 6:00 PM CEST: During the pandemic, we moved into new offices, which have already been named Best Startup Office of the Year. We’re excited to show you our new event space (in person) as '
-      og_title: 'Design Meetup: Cutting edge of prototyping (Offline + Livestreaming) | Meetup'
+      meta_description: 'Tue, Oct 19, 6:00 PM  CEST: During the pandemic, we moved into new offices, which have already been named Best Startup Office of the Year. We’re excited to show you our new event space (in person) as '
+      og_title: 'Design Meetup: Cutting edge of prototyping (Offline + Livestreaming), Tue, Oct 19, 2021, 6:00 PM   | Meetup'
       image: https://secure.meetupstatic.com/photos/event/a/5/b/a/600_499422426.jpeg
       url: https://www.meetup.com/productboard-meetups/events/281251376/
       ical:
@@ -140,8 +140,8 @@ series:
         dtstart: 2021-10-19 18:00:00+02:00
         dtend: 2021-10-19 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Oct 20, 6:00 PM CEST: During the pandemic, we moved into new offices, which have already been named Best Startup Office of the Year. We are excited to show you our new event space (in person) as'
-      og_title: 'Frontend Meetup PRG #2 - Offline + Livestreaming | Meetup'
+      meta_description: 'Wed, Oct 20, 6:00 PM  CEST: During the pandemic, we moved into new offices, which have already been named Best Startup Office of the Year. We are excited to show you our new event space (in person) as'
+      og_title: 'Frontend Meetup PRG #2 - Offline + Livestreaming, Wed, Oct 20, 2021, 6:00 PM   | Meetup'
       image: https://secure.meetupstatic.com/photos/event/9/b/d/1/600_499419889.jpeg
       url: https://www.meetup.com/productboard-meetups/events/281355157/
       ical:
@@ -165,13 +165,13 @@ series:
         dtstart: 2021-10-20 18:00:00+02:00
         dtend: 2021-10-20 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Dec 1, 6:00 PM CET: Stay home, stay safe, but stay connected to the community! 🙌
+      meta_description: 'Wed, Dec 1, 6:00 PM  CET: Stay home, stay safe, but stay connected to the community! 🙌
 
 
         Join us for our next online meetup. Please register via Eventbrite:
 
         https://www.eventbrite.com/e/frontend-mee'
-      og_title: 'Frontend Meetup #3 | Meetup'
+      og_title: 'Frontend Meetup #3, Wed, Dec 1, 2021, 6:00 PM   | Meetup'
       url: https://www.meetup.com/productboard-meetups/events/281628250/
       ical:
         summary: 'Frontend Meetup #3'
@@ -195,10 +195,10 @@ series:
         dtend: 2021-12-01 19:30:00+01:00
       image: https://secure.meetupstatic.com/photos/event/6/f/3/6/600_500428470.jpeg
   - meetupcom:
-      meta_description: 'Wed, Feb 9, 6:00 PM CET: Stay home, stay safe, but stay connected to the community! 🙌
+      meta_description: 'Wed, Feb 9, 6:00 PM  CET: Stay home, stay safe, but stay connected to the community! 🙌
 
         Join us for our next online meetup. We’ll be talking Backend and have put together an awesome program for you '
-      og_title: 'Backend Meetup #2 | Meetup'
+      og_title: 'Backend Meetup #2, Wed, Feb 9, 2022, 6:00 PM   | Meetup'
       url: https://www.meetup.com/productboard-meetups/events/283627281/
       ical:
         summary: 'Backend Meetup #2'
