--- a/data/sources/pydata-prague.yaml
+++ b/data/sources/pydata-prague.yaml
@@ -1,10 +1,10 @@
 series:
   meetupcom:
     url: https://www.meetup.com/PyData-Prague/events/279339785/
-    meta_description: 'Tue, Jul 13, 6:30 PM CEST: Hello PyData lovers,
+    meta_description: 'Tue, Jul 13, 6:30 PM  CEST: Hello PyData lovers,
 
 
       it''s been a while since our last (on-line, not to mention in-person) PyData meet-up. We are sorry for not having arranged anything in the lockdown per'
-    og_title: 'PyData Prague #9 - Reinforcement Yearning | Meetup'
+    og_title: 'PyData Prague #9 - Reinforcement Yearning, Tue, Jul 13, 2021, 6:30 PM   | Meetup'
     image: https://secure.meetupstatic.com/photos/event/5/c/1/b/600_497483579.jpeg
   events: []
