--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -14,13 +14,13 @@ series:
       name: Holešovická šachta
       address: Bubenská 242/14
   - meetupcom:
-      meta_description: 'Wed, Mar 16, 7:00 PM CET: **Let''s meet AFK (aka in-person) after a long time!**
+      meta_description: 'Wed, Mar 16, 7:00 PM  CET: **Let''s meet AFK (aka in-person) after a long time!**
 
 
         **coPylot: Programming 2.0? –** Libor Mořkovský
 
         GitHub Copilot is a code generator powered by OpenAI''s GPT-3 class de'
-      og_title: 'Pyvo Prague #130 | Meetup'
+      og_title: 'Pyvo Prague #130, Wed, Mar 16, 2022, 7:00 PM   | Meetup'
       url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydcfbvb/
       ical:
         summary: 'Pyvo Prague #130'
@@ -43,8 +43,8 @@ series:
         dtstart: 2022-03-16 19:00:00+01:00
         dtend: 2022-03-16 23:59:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Apr 20, 7:00 PM CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
-      og_title: 'Pyvo Prague # | Meetup'
+      meta_description: 'Wed, Apr 20, 7:00 PM  CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      og_title: 'Pyvo Prague #, Wed, Apr 20, 2022, 7:00 PM   | Meetup'
       url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydcgbbc/
       ical:
         summary: 'Pyvo Prague #'
@@ -67,8 +67,8 @@ series:
         dtstart: 2022-04-20 19:00:00+02:00
         dtend: 2022-04-20 23:59:00+02:00
   - meetupcom:
-      meta_description: 'Wed, May 18, 7:00 PM CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
-      og_title: 'Pyvo Prague # | Meetup'
+      meta_description: 'Wed, May 18, 7:00 PM  CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      og_title: 'Pyvo Prague #, Wed, May 18, 2022, 7:00 PM   | Meetup'
       url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydchbxb/
       ical:
         summary: 'Pyvo Prague #'
@@ -91,8 +91,8 @@ series:
         dtstart: 2022-05-18 19:00:00+02:00
         dtend: 2022-05-18 23:59:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Jun 15, 7:00 PM CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
-      og_title: 'Pyvo Prague # | Meetup'
+      meta_description: 'Wed, Jun 15, 7:00 PM  CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      og_title: 'Pyvo Prague #, Wed, Jun 15, 2022, 7:00 PM   | Meetup'
       url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydcjbtb/
       ical:
         summary: 'Pyvo Prague #'
@@ -146,8 +146,8 @@ series:
         dtstart: 2022-02-16 19:00:00+01:00
         dtend: 2022-02-16 23:59:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Jul 20, 7:00 PM CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
-      og_title: 'Pyvo Prague # | Meetup'
+      meta_description: 'Wed, Jul 20, 7:00 PM  CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      og_title: 'Pyvo Prague #, Wed, Jul 20, 2022, 7:00 PM   | Meetup'
       url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydckbbc/
       ical:
         summary: 'Pyvo Prague #'
