--- a/data/sources/webexpo.yaml
+++ b/data/sources/webexpo.yaml
@@ -7,11 +7,11 @@ series:
     image: https://secure.meetupstatic.com/photos/event/d/7/b/9/600_483715225.jpeg
   events:
   - meetupcom:
-      meta_description: 'Tue, Sep 21, 10:00 AM CEST: WebExpo is Central Europe''s largest conference covering deep tech & practical topics for developers, UX professionals & researchers, product managers, and marketers.
+      meta_description: 'Tue, Sep 21, 10:00 AM  CEST: WebExpo is Central Europe''s largest conference covering deep tech & practical topics for developers, UX professionals & researchers, product managers, and marketers.
 
 
         We''re'
-      og_title: WebExpo 2021 | Meetup
+      og_title: WebExpo 2021, Tue, Sep 21, 2021, 10:00 AM   | Meetup
       image: https://secure.meetupstatic.com/photos/event/b/3/d/d/600_497506045.jpeg
       url: https://www.meetup.com/WebExpo/events/267898993/
       ical:
@@ -35,8 +35,8 @@ series:
         dtstart: 2021-09-21 10:00:00+02:00
         dtend: 2021-09-23 18:00:00+02:00
   - meetupcom:
-      meta_description: 'Fri, Sep 20, 9:45 AM CEST: We are the web event of the year! The best conference for devs, UX professionals, designers, and marketers to meet up and share their experiences. We''re a rich community of'
-      og_title: WebExpo 2019 | Meetup
+      meta_description: 'Fri, Sep 20, 9:45 AM  CEST: We are the web event of the year! The best conference for devs, UX professionals, designers, and marketers to meet up and share their experiences. We''re a rich community of'
+      og_title: WebExpo 2019, Fri, Sep 20, 2019, 9:45 AM   | Meetup
       image: https://secure.meetupstatic.com/photos/event/d/9/d/c/600_483715772.jpeg
       url: https://www.meetup.com/WebExpo/events/263721184/
       ical:
@@ -60,8 +60,8 @@ series:
         dtstart: 2019-09-20 09:45:00+02:00
         dtend: 2019-09-22 18:00:00+02:00
   - meetupcom:
-      meta_description: 'Fri, Sep 23, 9:00 PM CEST: 2 days all about the web: 70 speakers, 2000 people from the industry and meetings IRL'
-      og_title: Get professional help before your obsessions take over! | Meetup
+      meta_description: 'Fri, Sep 23, 9:00 PM  CEST: 2 days all about the web: 70 speakers, 2000 people from the industry and meetings IRL'
+      og_title: Get professional help before your obsessions take over!, Fri, Sep 23, 2016, 9:00 PM   | Meetup
       image: https://secure.meetupstatic.com/photos/event/d/7/b/9/600_483715225.jpeg
       url: https://www.meetup.com/WebExpo/events/232703682/
       ical:
@@ -85,8 +85,8 @@ series:
         dtstart: 2016-09-23 21:00:00+02:00
         dtend: 2016-09-24 23:00:00+02:00
   - meetupcom:
-      meta_description: 'Fri, Sep 23, 8:00 AM CEST: '
-      og_title: WebExpo 2016 | Meetup
+      meta_description: 'Fri, Sep 23, 8:00 AM  CEST: '
+      og_title: WebExpo 2016, Fri, Sep 23, 2016, 8:00 AM   | Meetup
       image: https://secure.meetupstatic.com/photos/event/d/7/b/9/600_483715225.jpeg
       url: https://www.meetup.com/WebExpo/events/232103291/
       ical:
